tests/mismatched-call.stderr
error: mismatched types
   ┌─ test:6:15
   │
 6 │ accepts-text (1 + 2)
   │               ^^^^^ expected `Text`, but found `Number`
   │
   ┌─ <dir>/std/math.wpl:16:14
   │
16 │   'a + 'b -> Add 'b 'a
   │              --- actual error occurred here
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/mismatched-types

